# open_cl_sample

./: CLVideo.cl  CMakeLists.txt  README.md
src/: openCL_sample.cpp
